@@ -162,7 +162,7 @@ var Util, DOM, CloudFunc, CloudCmd;
             path  : 'key.js',
             func : function(){
                 Key  = CloudCmd.Key;
-                Key.init();
+                Key.bind();
             }
          });
         
@@ -368,7 +368,7 @@ var Util, DOM, CloudFunc, CloudCmd;
             lOnContextMenu_f = function(pEvent){
                 var lReturn_b = true;
                 
-                Key && Key.unSet();
+                Key && Key.unsetBind();
                 
                 /* getting html element
                  * currentTarget - DOM event
