@@ -139,7 +139,7 @@ var CloudCmd, Util, DOM, CodeMirror;
                 success    : function(data){
                     if( DOM.hidePanel() ){
                         Util.exec(pCallBack, data);
-                        Key.unSet();
+                        Key.unsetBind();
                     }
                     
                     DOM.Images.hideLoad();
@@ -155,7 +155,7 @@ var CloudCmd, Util, DOM, CodeMirror;
      * function hides CodeMirror editor
      */
     function hide() {
-        Key.set();
+        Key.setBind();
         
         if(CodeMirrorElement && FM)
             FM.removeChild(CodeMirrorElement);
@@ -188,8 +188,9 @@ var CloudCmd, Util, DOM, CodeMirror;
         DOM.setButtonKey('f4', CodeMirrorEditor.show);
         
         function lListener(pEvent){
-            /* если клавиши можно обрабатывать */
-            if( Key.get() ){
+            var lIsBind = Key.isBind();
+            
+            if (lIsBind) {
                 var lF4     = CloudCmd.KEY.F4,
                     lKey    = pEvent.keyCode;
                                 
