@@ -79,7 +79,7 @@ var CloudCmd, Util, DOM, $;
         if( DOM.hidePanel() ){
             Hidden = false;
             DOM.show(TerminalId);
-            Key.unSet();
+            Key.unsetBind();
             Term.resume();
         }
     };
@@ -92,7 +92,7 @@ var CloudCmd, Util, DOM, $;
         
         DOM.hide(TerminalId);
         DOM.showPanel();
-        Key.set();
+        Key.setBind();
         
         Term.pause();
     };
@@ -116,16 +116,22 @@ var CloudCmd, Util, DOM, $;
                 lESC        = lKEY.ESC,
                 lTRA        = lKEY.TRA,
                 lKey        = pEvent.keyCode,
-                lBinded     = Key.get();
-            /* если клавиши можно обрабатывать */
-            if(Hidden &&  lBinded && lKey === lTRA){
-                JqueryTerminal.show();
-                DOM.preventDefault(pEvent);
-                lRet = false;
-            }
+                lIsBind     = Key.isBind();
             
-            else if(!Hidden && lKey === lESC)
-                JqueryTerminal.hide();
+            switch(lKey){
+                case lTRA:
+                    if(Hidden &&  lIsBind){
+                        JqueryTerminal.show();
+                        DOM.preventDefault(pEvent);
+                        lRet = false;
+                    }
+                    break;
+            
+                case lESC:
+                    if(!Hidden)
+                        JqueryTerminal.hide();
+                    break;
+            }
             
             return lRet;
         }
