@@ -11,7 +11,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
         Config = {
             beforeShow  : function(){
                 DOM.Images.hideLoad();
-                Key.unSet();
+                Key.unsetBind();
             },
             
             afterShow   : function(){
@@ -20,7 +20,7 @@ var CloudCmd, Util, DOM, CloudFunc, $;
                     lEditor.focus();
             },
             
-            beforeClose : Util.retFunc( Key.set ),
+            beforeClose : Util.retFunc( Key.setBind ),
             
             openEffect      : 'none',
             closeEffect     : 'none',
@@ -135,11 +135,11 @@ var CloudCmd, Util, DOM, CloudFunc, $;
             var lKEY        = CloudCmd.KEY,
                 lF3         = lKEY.F3,
                 lF1         = lKEY.F1,
-                lBinded     = Key.get(),
+                lIsBind     = Key.isBind(),
                 lKey        = pEvent.keyCode;
             
             /* если клавиши можно обрабатывать */
-            if( lBinded){
+            if (lIsBind) {
                 switch(lKey){
                     case lF3:
                         lView();
